--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.11.1",
+    "tachyons-components": "^1.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
